# walrus

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  connection.rs  db.rs  errors.rs  frame.rs  lib.rs  parse.rs  server.rs
src/cmd/: blpop.rs  get.rs  llen.rs  lpop.rs  lpush.rs  lrange.rs  mod.rs  ping.rs  rpush.rs  set.rs  wtype.rs
tests/: client.rs
