[package]
name = "walrus"
version = "0.1.0"
authors = ["Narendra <narendrakchoudhary5@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
bytes = "1.11.0"
memchr = "2.7.6"
itoa = "1.0.17"
ryu = "1.0.23"
rand = "0.10.0"
futures = "0.3.32"
fast-float = "0.2.0"
clap = { version = "4.6.1", features = ["derive"] }
ahash = "0.8.12"

[profile.release]
debug = true
lto = true

